# higgs-kernels

./: pyproject.toml
bench_tests/: CMakeLists.txt  benchmark.cpp  dequant_kernel.cu  dequant_kernel.h  plot_results.py
higgs_kernels/: __init__.py  grids.safetensors  kernels.py  linear.py  references.py
higgs_kernels/csrc/portable/: dequant.cu
tests/: portable_test.py
